--- a/example/vue-demo/.babelrc
+++ b/example/vue-demo/.babelrc
@@ -1,5 +1,10 @@
 {
   "presets": [
-    "env"
-  ]
+    ["@babel/preset-env",{
+      "targets": {
+          "browsers": ["> 1%", "last 2 versions"]
+      }
+    }]
+  ],
+  "plugins": ["@babel/plugin-transform-runtime"]
 }
